--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Keybind Trainer</title>
+    <title>Keybind Trainer – Improve Your Keyboard Skills</title>
+    <meta name="description" content="Practice and master your keyboard keybinds with this interactive keybind trainer. Track your progress, customize configs, and boost your speed." />
+    <meta name="keywords" content="keybind trainer, keyboard practice, typing game, keybinds, gaming, productivity" />
+    <meta name="robots" content="index, follow" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3733264783480060"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
